--- a/index.html
+++ b/index.html
@@ -1,210 +1,127 @@
-<html class="scroll-smooth" lang="pt-BR">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <title>
-   Mundo Mágico dos Brinquedos
-  </title>
-  <script src="https://cdn.tailwindcss.com">
-  </script>
-  <link href="https://fonts.googleapis.com/css2?family=Baloo+2&amp;family=Roboto&amp;display=swap" rel="stylesheet"/>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mundo Mágico Brinquedos</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <style>
-   body {
-      font-family: "Roboto", sans-serif;
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #f9f9f9;
     }
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-      font-family: "Baloo 2", cursive;
+    .navbar {
+      background-color: #ffcc00;
+    }
+    .hero {
+      background: linear-gradient(to right, #aad7ff, #ffd3b6);
+      padding: 60px 20px;
+      text-align: center;
+    }
+    .hero h1 {
+      font-size: 3rem;
+      color: #333;
+    }
+    .card {
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+    .footer {
+      background: #ffcc00;
+      padding: 20px;
+      text-align: center;
     }
   </style>
- </head>
- <body class="bg-gradient-to-b from-pink-50 to-pink-100 min-h-screen flex flex-col">
-  <!-- Header / Navbar -->
-  <header class="bg-pink-300 shadow-md sticky top-0 z-50">
-   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between h-16">
-    <a class="flex items-center space-x-3" href="#">
-     <img alt="Logo do Mundo Mágico dos Brinquedos, um brinquedo mágico colorido com estrelas" class="w-12 h-12" height="48" src="https://storage.googleapis.com/a1aa/image/b2c2ae5e-c67e-45dd-1e9e-526acefcb813.jpg" width="48"/>
-     <span class="text-white text-2xl font-bold select-none">
-      Mundo Mágico dos Brinquedos
-     </span>
-    </a>
-    <nav class="hidden md:flex space-x-8 text-white font-semibold text-lg">
-     <a class="hover:text-yellow-300 transition" href="#home">
-      Início
-     </a>
-     <a class="hover:text-yellow-300 transition" href="#produtos">
-      Produtos
-     </a>
-     <a class="hover:text-yellow-300 transition" href="#sobre">
-      Sobre Nós
-     </a>
-    </nav>
-    <button aria-label="Abrir menu" class="md:hidden text-white focus:outline-none" id="menu-btn">
-     <i class="fas fa-bars fa-2x">
-     </i>
-    </button>
-   </div>
-   <!-- Mobile menu -->
-   <nav class="hidden md:hidden bg-pink-300 px-4 pt-2 pb-4 space-y-2 text-white font-semibold text-lg" id="mobile-menu">
-    <a class="block hover:text-yellow-300 transition" href="#home">
-     Início
-    </a>
-    <a class="block hover:text-yellow-300 transition" href="#produtos">
-     Produtos
-    </a>
-    <a class="block hover:text-yellow-300 transition" href="#sobre">
-     Sobre Nós
-    </a>
-   </nav>
-  </header>
-  <!-- Hero Section -->
-  <section class="relative bg-pink-50 flex flex-col-reverse md:flex-row items-center max-w-7xl mx-auto px-6 py-12 md:py-24 gap-10" id="home">
-   <div class="md:w-1/2 text-center md:text-left">
-    <h1 class="text-4xl md:text-5xl font-bold text-pink-700 mb-4 leading-tight">
-     Bem-vindo ao Mundo Mágico dos Brinquedos!
-    </h1>
-    <p class="text-pink-600 text-lg md:text-xl mb-6">
-     Descubra brinquedos incríveis para todas as idades, com qualidade e
-        diversão garantida.
-    </p>
-    <a class="inline-block bg-pink-600 hover:bg-pink-700 text-white font-semibold px-6 py-3 rounded-lg shadow-lg transition" href="#produtos">
-     Confira nossos produtos
-    </a>
-   </div>
-   <div class="md:w-1/2 flex justify-center">
-    <img alt="Crianças sorrindo e brincando com brinquedos coloridos em um ambiente alegre e mágico" class="rounded-lg shadow-lg max-w-full h-auto" height="400" src="https://storage.googleapis.com/a1aa/image/2d047d69-239a-4f59-fc2f-abc3801579ab.jpg" width="500"/>
-   </div>
-  </section>
-  <!-- Produtos Section -->
-  <section class="max-w-7xl mx-auto px-6 py-16 bg-pink-100 rounded-t-3xl shadow-inner" id="produtos">
-   <h2 class="text-4xl font-bold text-pink-700 mb-12 text-center">
-    Nossos Produtos
-   </h2>
-   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 max-w-6xl mx-auto" role="list">
-    <!-- Carrinho de brinquedo -->
-    <article class="bg-white rounded-xl shadow-md overflow-hidden flex flex-col">
-     <img alt="Carrinho de brinquedo vermelho com detalhes em amarelo e rodas pretas, em fundo branco" class="w-full h-48 object-cover" height="300" src="https://storage.googleapis.com/a1aa/image/d7bd9090-fdb7-4e8f-f500-9afc4d7e3682.jpg" width="400"/>
-     <div class="p-4 flex flex-col flex-grow">
-      <h3 class="text-xl font-semibold text-pink-700 mb-2">
-       Carrinho de Brinquedo
-      </h3>
-      <p class="text-pink-600 flex-grow">
-       Carrinho de brinquedo rápido e divertido para colecionar e brincar.
-      </p>
-      <div class="mt-4 flex items-center justify-between">
-       <span class="text-pink-800 font-bold text-lg">
-        R$ 49,90
-       </span>
-       <button aria-label="Adicionar Carrinho de Brinquedo ao carrinho" class="bg-pink-600 hover:bg-pink-700 text-white px-4 py-2 rounded-lg transition">
-        <i class="fas fa-cart-plus mr-2">
-        </i>
-        Comprar
-       </button>
+</head>
+<body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="#">Mundo Mágico</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#produtos">Produtos</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
+        </ul>
       </div>
-     </div>
-    </article>
-    <!-- Boneca estilo Barbie -->
-    <article class="bg-white rounded-xl shadow-md overflow-hidden flex flex-col">
-     <img alt="Boneca estilo Barbie com vestido rosa brilhante e cabelo loiro longo, em fundo branco" class="w-full h-48 object-cover" height="300" src="https://storage.googleapis.com/a1aa/image/c3d0af67-dbfe-4a41-e304-a13f78d4c77e.jpg" width="400"/>
-     <div class="p-4 flex flex-col flex-grow">
-      <h3 class="text-xl font-semibold text-pink-700 mb-2">
-       Boneca
-      </h3>
-      <p class="text-pink-600 flex-grow">
-       Boneca estilo Barbie com vestido rosa, perfeita para brincadeiras
-            de faz de conta.
-      </p>
-      <div class="mt-4 flex items-center justify-between">
-       <span class="text-pink-800 font-bold text-lg">
-        R$ 89,90
-       </span>
-       <button aria-label="Adicionar Boneca ao carrinho" class="bg-pink-600 hover:bg-pink-700 text-white px-4 py-2 rounded-lg transition">
-        <i class="fas fa-cart-plus mr-2">
-        </i>
-        Comprar
-       </button>
-      </div>
-     </div>
-    </article>
-    <!-- Boneco de super herói estilo Homem-Aranha -->
-    <article class="bg-white rounded-xl shadow-md overflow-hidden flex flex-col">
-     <img alt="Boneco de super herói estilo Homem-Aranha com traje vermelho e azul, em fundo branco" class="w-full h-48 object-cover" height="300" src="https://storage.googleapis.com/a1aa/image/ecafeab8-d815-4ebb-75cf-745fb9ec23e1.jpg" width="400"/>
-     <div class="p-4 flex flex-col flex-grow">
-      <h3 class="text-xl font-semibold text-pink-700 mb-2">
-       Boneco Super Herói
-      </h3>
-      <p class="text-pink-600 flex-grow">
-       Boneco de super herói estilo Homem-Aranha, articulado para muita
-            ação e diversão.
-      </p>
-      <div class="mt-4 flex items-center justify-between">
-       <span class="text-pink-800 font-bold text-lg">
-        R$ 109,90
-       </span>
-       <button aria-label="Adicionar Boneco Super Herói ao carrinho" class="bg-pink-600 hover:bg-pink-700 text-white px-4 py-2 rounded-lg transition">
-        <i class="fas fa-cart-plus mr-2">
-        </i>
-        Comprar
-       </button>
-      </div>
-     </div>
-    </article>
-   </div>
-  </section>
-  <!-- Sobre Nós Section -->
-  <section class="max-w-7xl mx-auto px-6 py-16 bg-pink-50 rounded-b-3xl shadow-inner mt-16 mb-16" id="sobre">
-   <h2 class="text-4xl font-bold text-pink-700 mb-8 text-center">
-    Sobre Nós
-   </h2>
-   <div class="flex flex-col md:flex-row items-center gap-10 max-w-5xl mx-auto text-pink-700 text-lg leading-relaxed">
-    <img alt="Interior de loja de brinquedos colorida e acolhedora com prateleiras cheias de brinquedos" class="rounded-lg shadow-lg w-full md:w-1/2 object-cover" height="300" src="https://storage.googleapis.com/a1aa/image/3128cb92-817f-4272-e5b2-57d9910e3bfd.jpg" width="400"/>
-    <div>
-     <p>
-      Somos uma empresa iniciante dedicada à venda de brinquedos que
-          encantam e divertem crianças de todas as idades.
-     </p>
-     <p class="mt-4">
-      Nosso objetivo é oferecer produtos de qualidade, com atendimento
-          próximo e preços acessíveis para tornar a experiência de compra
-          mágica e inesquecível.
-     </p>
     </div>
-   </div>
-  </section>
-  <!-- Footer -->
-  <footer class="bg-pink-300 text-white py-6 mt-auto">
-   <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center">
-    <p class="text-sm">
-     © 2024 Mundo Mágico dos Brinquedos. Todos os direitos reservados.
-    </p>
-    <div class="flex space-x-6 mt-4 md:mt-0">
-     <a aria-label="Facebook" class="hover:text-yellow-300 transition" href="#">
-      <i class="fab fa-facebook fa-lg">
-      </i>
-     </a>
-     <a aria-label="Instagram" class="hover:text-yellow-300 transition" href="#">
-      <i class="fab fa-instagram fa-lg">
-      </i>
-     </a>
-     <a aria-label="Twitter" class="hover:text-yellow-300 transition" href="#">
-      <i class="fab fa-twitter fa-lg">
-      </i>
-     </a>
-    </div>
-   </div>
-  </footer>
-  <script>
-   const menuBtn = document.getElementById("menu-btn");
-    const mobileMenu = document.getElementById("mobile-menu");
+  </nav>
 
-    menuBtn.addEventListener("click", () => {
-      mobileMenu.classList.toggle("hidden");
-    });
-  </script>
- </body>
+  <!-- Hero -->
+  <div class="hero">
+    <h1>Bem-vindo ao Mundo Mágico Brinquedos!</h1>
+    <p>Brinquedos educativos, eletrônicos e colecionáveis com preço justo!</p>
+  </div>
+
+  <!-- Produtos -->
+  <div class="container my-5" id="produtos">
+    <h2 class="text-center mb-4">Produtos em Destaque</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card">
+          <img src="https://i.imgur.com/8Km9tLL.jpg" class="card-img-top" alt="Brinquedo Educativo">
+          <div class="card-body">
+            <h5 class="card-title">Brinquedo Educativo</h5>
+            <p class="card-text">Ajuda no desenvolvimento motor e cognitivo.</p>
+            <p class="fw-bold">R$ 40,00</p>
+            <a href="#" class="btn btn-warning w-100">Adicionar ao carrinho</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <img src="https://i.imgur.com/7bYDnpp.jpg" class="card-img-top" alt="Jogo de Tabuleiro">
+          <div class="card-body">
+            <h5 class="card-title">Jogo de Tabuleiro</h5>
+            <p class="card-text">Diversão para toda a família com estratégia.</p>
+            <p class="fw-bold">R$ 60,00</p>
+            <a href="#" class="btn btn-warning w-100">Adicionar ao carrinho</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <img src="https://i.imgur.com/z12W3YO.jpg" class="card-img-top" alt="Colecionável">
+          <div class="card-body">
+            <h5 class="card-title">Colecionável Fofo</h5>
+            <p class="card-text">Item exclusivo para colecionadores apaixonados.</p>
+            <p class="fw-bold">R$ 80,00</p>
+            <a href="#" class="btn btn-warning w-100">Adicionar ao carrinho</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Contato -->
+  <div class="container my-5" id="contato">
+    <h2 class="text-center mb-4">Entre em Contato</h2>
+    <form class="mx-auto" style="max-width: 500px;">
+      <div class="mb-3">
+        <label for="nome" class="form-label">Nome</label>
+        <input type="text" class="form-control" id="nome" required>
+      </div>
+      <div class="mb-3">
+        <label for="telefone" class="form-label">Telefone</label>
+        <input type="tel" class="form-control" id="telefone" required>
+      </div>
+      <div class="mb-3">
+        <label for="mensagem" class="form-label">Mensagem</label>
+        <textarea class="form-control" id="mensagem" rows="3"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">Enviar</button>
+    </form>
+  </div>
+
+  <!-- Rodapé -->
+  <div class="footer">
+    <p>© 2025 Mundo Mágico Brinquedos | Desenvolvido com carinho 🎠</p>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
